finish association & start niching

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,34 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "from jax import numpy as jnp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([1.        , 0.5       , 0.33333334], dtype=float32)"
+       "Array([1.4142135, 1.4142135, 1.4142135, 0.       ], dtype=float32)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from jax import numpy as jnp\n",
+    "ref = jnp.array([[1, 0, 0],\n",
+    "                 [0, 2, 0],\n",
+    "                 [0, 0, 3],\n",
+    "                 [1, 1, 1]])\n",
     "\n",
-    "a = jnp.array([1, 2, 3])\n",
-    "\n",
-    "b = jnp.array([[3, 2, 1],\n",
+    "x = jnp.array([1, 1, 1])\n",
+    "ref_norm = jnp.linalg.norm(ref, axis=1)\n",
+    "jnp.linalg.norm(jnp.cross(x, ref), axis=1) / ref_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[1, 2, 3],\n",
+       "       [3, 2, 3],\n",
+       "       [7, 7, 7],\n",
+       "       [3, 2, 1]], dtype=int32)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.array([[3, 2, 1],\n",
     "               [1, 2, 3],\n",
-    "               [3, 2, 1]])\n",
+    "               [3, 2, 3],\n",
+    "               [7, 7, 7]])\n",
+    "y = jnp.array([3, 0, 1, 1])\n",
     "\n",
-    "plane = jnp.array([1, 2, 3])\n",
-    "p = jnp.eye(3)\n",
-    "plane, p\n",
+    "idx = jnp.argsort(y)\n",
+    "# x = jnp.take_along_axis(x, idx[:, None], axis=0)\n",
     "\n",
-    "1/ (plane @ jnp.eye(3))"
+    "x[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[nan, nan, nan],\n",
+       "       [nan, nan, nan],\n",
+       "       [nan, nan, nan],\n",
+       "       [nan, nan, nan],\n",
+       "       [nan, nan, nan]], dtype=float32, weak_type=True)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.array([1, 2, 3, 2, 0, 1])\n",
+    "\n",
+    "jnp.argmin(x)\n",
+    "\n",
+    "x = x.at[0].set(jnp.argmin(x))\n",
+    "\n",
+    "jnp.full((5, 3), jnp.nan)"
    ]
   },
   {
