--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,61 +12,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([1.4142135, 1.4142135, 1.4142135, 0.       ], dtype=float32)"
+       "Array(nan, dtype=float32)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ref = jnp.array([[1, 0, 0],\n",
-    "                 [0, 2, 0],\n",
-    "                 [0, 0, 3],\n",
-    "                 [1, 1, 1]])\n",
+    "jnp.linalg.norm(jnp.array([1, 2, jnp.nan]))\n",
     "\n",
-    "x = jnp.array([1, 1, 1])\n",
-    "ref_norm = jnp.linalg.norm(ref, axis=1)\n",
-    "jnp.linalg.norm(jnp.cross(x, ref), axis=1) / ref_norm"
+    "\n",
+    "x = jnp.array([jnp.nan, jnp.nan])\n",
+    "idx = jnp.nanargmax(x)\n",
+    "x[idx]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[1, 2, 3],\n",
-       "       [3, 2, 3],\n",
-       "       [7, 7, 7],\n",
-       "       [3, 2, 1]], dtype=int32)"
+       "Array([[nan, nan, nan],\n",
+       "       [nan, nan, nan],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [nan, nan, nan]], dtype=float32, weak_type=True)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = jnp.array([[3, 2, 1],\n",
-    "               [1, 2, 3],\n",
-    "               [3, 2, 3],\n",
-    "               [7, 7, 7]])\n",
-    "y = jnp.array([3, 0, 1, 1])\n",
+    "@jax.jit\n",
+    "def run(x):\n",
+    "    k = jnp.min(x)\n",
+    "    mask = x == k\n",
+    "    x = jnp.where(mask, x, jnp.nan)\n",
+    "    return x\n",
+    "    \n",
+    "x = jnp.array([[3, 3, 3],\n",
+    "               [2, 2, 2],\n",
+    "               [0, 0, 0],\n",
+    "               [1, 1, 1]])\n",
+    "run(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array(2, dtype=int32), Array(-9.536743e-07, dtype=float32))"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat = jnp.array([[1., 2., 4.],\n",
+    "                 [1.0000001, 2, 4.],\n",
+    "                 [3, 3, 3]])\n",
     "\n",
-    "idx = jnp.argsort(y)\n",
-    "# x = jnp.take_along_axis(x, idx[:, None], axis=0)\n",
+    "jnp.linalg.matrix_rank(mat), jnp.linalg.det(mat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array([[1.        , 1.7320508 ],\n",
+       "        [0.        , 0.57735026]], dtype=float32),\n",
+       " Array([[0.        , 0.        , 1.        ],\n",
+       "        [0.57735026, 0.57735026, 0.57735026]], dtype=float32),\n",
+       " Array([[0.        , 0.        , 1.        ],\n",
+       "        [0.99999994, 0.99999994, 0.99999994],\n",
+       "        [0.        , 0.        , 0.        ],\n",
+       "        [0.3333333 , 0.3333333 , 0.3333333 ]], dtype=float32),\n",
+       " Array([[ 1.0000000e+00,  1.0000000e+00,  0.0000000e+00],\n",
+       "        [ 5.9604645e-08,  5.9604645e-08,  5.9604645e-08],\n",
+       "        [ 1.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+       "        [ 6.6666669e-01, -3.3333331e-01, -3.3333331e-01]], dtype=float32),\n",
+       " Array([[1.4142135e+00, 1.0323827e-07],\n",
+       "        [1.0000000e+00, 8.1649655e-01]], dtype=float32))"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = jnp.array([[1, 1, 1],\n",
+    "               [1, 0, 0]])\n",
+    "y = jnp.array([[0, 0, 2],\n",
+    "                [1, 1, 1]])\n",
+    "y_norm = jnp.linalg.norm(y, axis=1)\n",
     "\n",
-    "x[idx]"
+    "proj_len = x @ y.T / y_norm\n",
+    "unit_vec = y / y_norm[:, None]\n",
+    "proj_vec = jnp.reshape(proj_len, (proj_len.size, 1)) * jnp.tile(unit_vec, (len(x), 1))\n",
+    "h = jnp.repeat(x, len(y), axis=0) - proj_vec\n",
+    "d = jnp.reshape(jnp.linalg.norm(h, axis=1), (len(x), len(y)))\n",
+    "\n",
+    "proj_len, unit_vec, proj_vec, h, d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = jnp.array([[1, 2, 3],\n",
+    "                  [4, 5, 6]])\n",
+    "temp.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Array([[1.4142135e+00, 1.0323827e-07, 1.4142135e+00, 1.0000000e+00],\n",
+       "        [1.0000000e+00, 8.1649655e-01, 0.0000000e+00, 7.0710677e-01]],      dtype=float32),\n",
+       " Array([1, 2], dtype=int32),\n",
+       " Array([1.0323827e-07, 0.0000000e+00], dtype=float32))"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@jax.jit\n",
+    "def run(x, y):\n",
+    "    def perpendicular_distance(x, y):\n",
+    "        y_norm = jnp.linalg.norm(y, axis=1)\n",
+    "        proj_len = x @ y.T / y_norm\n",
+    "        unit_vec = y / y_norm[:, None]\n",
+    "        proj_vec = jnp.reshape(proj_len, (proj_len.size, 1)) * jnp.tile(unit_vec, (len(x), 1))\n",
+    "        prep_vec = jnp.repeat(x, len(y), axis=0) - proj_vec\n",
+    "        dist = jnp.reshape(jnp.linalg.norm(prep_vec, axis=1), (len(x), len(y)))\n",
+    "        return dist\n",
+    "    \n",
+    "    dist = perpendicular_distance(x, y)\n",
+    "    pi = jnp.argmin(dist, axis=1)\n",
+    "    d = dist[jnp.arange(len(x)), pi]\n",
+    "    return dist, pi, d\n",
+    "\n",
+    "\n",
+    "x = jnp.array([[1, 1, 1],\n",
+    "               [1, 0, 0]])\n",
+    "y = jnp.array([[0, 0, 2],\n",
+    "               [1, 1, 1],\n",
+    "               [3, 0, 0],\n",
+    "               [1, 1, 0]])\n",
+    "run(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(81, dtype=int32)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = jnp.array([1, 2, 3, 4, 6, 7, 34, 12, 3, 4, 5])\n",
+    "jnp.sum(a < 4)\n",
+    "jnp.sum(a)"
    ]
   },
   {
