the last while ...

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -140,24 +140,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "(Array(6, dtype=int32), Array(4, dtype=int32, weak_type=True))"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp = jnp.array([[1, 2, 3],\n",
-    "                  [4, 5, 6]])\n",
-    "temp.size"
+    "@jax.jit\n",
+    "def run(size, x):\n",
+    "    size = 4\n",
+    "    def while_body(val):\n",
+    "        ans, i = val\n",
+    "        return ans+x[i], i+1\n",
+    "    \n",
+    "    return jax.lax.while_loop(lambda val: x[val[1]] < size,\n",
+    "                       while_body,\n",
+    "                       (0, 0))\n",
+    "\n",
+    "run(10, jnp.arange(5))"
    ]
   },
   {
@@ -208,54 +217,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(81, dtype=int32)"
+       "Array([4, 3, 1, 1, 1, 1], dtype=int32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = jnp.array([1, 2, 3, 4, 6, 7, 34, 12, 3, 4, 5])\n",
-    "jnp.sum(a < 4)\n",
-    "jnp.sum(a)"
+    "@jax.jit\n",
+    "def run(x):\n",
+    "    return jnp.bincount(x, length=6)\n",
+    "\n",
+    "x = jnp.array([1, 2, 3, 4, 5, -1, 0, -1, 0, 1, 1])\n",
+    "\n",
+    "run(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([[nan, nan, nan],\n",
-       "       [nan, nan, nan],\n",
-       "       [nan, nan, nan],\n",
-       "       [nan, nan, nan],\n",
-       "       [nan, nan, nan]], dtype=float32, weak_type=True)"
+       "Array(-1, dtype=int32)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = jnp.array([1, 2, 3, 2, 0, 1])\n",
+    "x = jnp.array([jnp.nan, jnp.nan, jnp.nan])\n",
     "\n",
-    "jnp.argmin(x)\n",
-    "\n",
-    "x = x.at[0].set(jnp.argmin(x))\n",
-    "\n",
-    "jnp.full((5, 3), jnp.nan)"
+    "jnp.nanargmin(x)\n",
+    "\n"
    ]
   },
   {
