--- a/temp.ipynb
+++ b/temp.ipynb
@@ -217,51 +217,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([4, 3, 1, 1, 1, 1], dtype=int32)"
+       "(Array([ True, False,  True, False,  True, False,  True], dtype=bool),\n",
+       " Array(0, dtype=int32))"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "@jax.jit\n",
-    "def run(x):\n",
-    "    return jnp.bincount(x, length=6)\n",
+    "def run(x, mask):\n",
+    "    key = jax.random.PRNGKey(x[0] * x[-1])\n",
+    "    temp = jax.random.randint(key, (1, len(x)), 0, len(x))\n",
+    "    temp = temp + mask * len(x)\n",
+    "    return jnp.argmax(temp)\n",
     "\n",
-    "x = jnp.array([1, 2, 3, 4, 5, -1, 0, -1, 0, 1, 1])\n",
+    "x = jnp.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "mask = x % 2 != 0\n",
     "\n",
-    "run(x)"
+    "mask, run(x, mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array(-1, dtype=int32)"
+       "(Array([2], dtype=int32),\n",
+       " Array([8, 1, 7], dtype=int32),\n",
+       " Array([8, 1, 7], dtype=int32))"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = jnp.array([jnp.nan, jnp.nan, jnp.nan])\n",
-    "\n",
-    "jnp.nanargmin(x)\n",
-    "\n"
+    "import jax.random as random\n",
+    "key = random.PRNGKey(0) # generate a random key\n",
+    "random.randint(key, shape=(1, ), minval=0, maxval=10),  random.randint(key, shape=(3,), minval=0, maxval=10),  random.randint(key, shape=(3,), minval=0, maxval=10)\n"
    ]
   },
   {
