--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,6 +2,81 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from evox import pipelines, algorithms, problems\n",
+    "from evox.monitors import StdMOMonitor\n",
+    "from evox.metrics import IGD\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "\n",
+    "from.src.evox.algorithms import NSGA3\n",
+    "\n",
+    "def run_moea(algorithm, problem=problems.classic.DTLZ1(m=3)):\n",
+    "    key = jax.random.PRNGKey(123)\n",
+    "    monitor = StdMOMonitor(record_pf=False)\n",
+    "    problem = problems.classic.DTLZ1(m=3)\n",
+    "    pipeline = pipelines.StdPipeline(\n",
+    "        algorithm=algorithm,\n",
+    "        problem=problem,\n",
+    "        fitness_transform=monitor.record_fit,\n",
+    "    )\n",
+    "    state = pipeline.init(key)\n",
+    "    true_pf, state = problem.pf(state)\n",
+    "\n",
+    "    for i in range(10):\n",
+    "        state = pipeline.step(state)\n",
+    "\n",
+    "    objs = monitor.get_last()\n",
+    "    igd = IGD(true_pf, objs).calulate()\n",
+    "    print(\"igd\", igd)\n",
+    "\n",
+    "\n",
+    "def test_ibea():\n",
+    "    algorithm = algorithms.IBEA(\n",
+    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
+    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
+    "        n_objs=3,\n",
+    "        pop_size=100,\n",
+    "    )\n",
+    "    run_moea(algorithm)\n",
+    "\n",
+    "\n",
+    "def test_moead():\n",
+    "    algorithm = algorithms.MOEAD(\n",
+    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
+    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
+    "        n_objs=3,\n",
+    "        pop_size=100,\n",
+    "        type=1,\n",
+    "    )\n",
+    "    run_moea(algorithm)\n",
+    "\n",
+    "\n",
+    "def test_nsga2():\n",
+    "    algorithm = algorithms.NSGA2(\n",
+    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
+    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
+    "        n_objs=3,\n",
+    "        pop_size=100,\n",
+    "    )\n",
+    "    run_moea(algorithm)\n",
+    "\n",
+    "\n",
+    "def test_rvea():\n",
+    "    algorithm = algorithms.RVEA(\n",
+    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
+    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
+    "        n_objs=3,\n",
+    "        pop_size=100,\n",
+    "    )\n",
+    "    run_moea(algorithm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -298,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
