--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,17 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'evox.algorithms' has no attribute 'NSGA3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 77\u001b[0m\n\u001b[1;32m     69\u001b[0m     algorithm \u001b[39m=\u001b[39m algorithms\u001b[39m.\u001b[39mNSGA3(\n\u001b[1;32m     70\u001b[0m         lb\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m),\n\u001b[1;32m     71\u001b[0m         ub\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     72\u001b[0m         n_objs\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m     73\u001b[0m         pop_size\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     74\u001b[0m     )\n\u001b[1;32m     75\u001b[0m     run_moea(algorithm)\n\u001b[0;32m---> 77\u001b[0m test_nsga3()\n",
+      "Cell \u001b[0;32mIn[20], line 69\u001b[0m, in \u001b[0;36mtest_nsga3\u001b[0;34m()\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_nsga3\u001b[39m():\n\u001b[0;32m---> 69\u001b[0m     algorithm \u001b[39m=\u001b[39m algorithms\u001b[39m.\u001b[39;49mNSGA3(\n\u001b[1;32m     70\u001b[0m         lb\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m),\n\u001b[1;32m     71\u001b[0m         ub\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     72\u001b[0m         n_objs\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m     73\u001b[0m         pop_size\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     74\u001b[0m     )\n\u001b[1;32m     75\u001b[0m     run_moea(algorithm)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'evox.algorithms' has no attribute 'NSGA3'"
+     ]
+    }
+   ],
    "source": [
     "from evox import pipelines, algorithms, problems\n",
     "from evox.monitors import StdMOMonitor\n",
     "from evox.metrics import IGD\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
-    "\n",
-    "from.src.evox.algorithms import NSGA3\n",
     "\n",
     "def run_moea(algorithm, problem=problems.classic.DTLZ1(m=3)):\n",
     "    key = jax.random.PRNGKey(123)\n",
@@ -72,17 +83,45 @@
     "        n_objs=3,\n",
     "        pop_size=100,\n",
     "    )\n",
-    "    run_moea(algorithm)\n"
+    "    run_moea(algorithm)\n",
+    "    \n",
+    "\n",
+    "def test_nsga3():\n",
+    "    algorithm = algorithms.NSGA3(\n",
+    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
+    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
+    "        n_objs=3,\n",
+    "        pop_size=100,\n",
+    "    )\n",
+    "    run_moea(algorithm)\n",
+    "\n",
+    "test_nsga3()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2441914641 1384938218] [3819641963 2025898573]\n",
+      "[2698884502 3718367942] [3856573362 1826437626]\n",
+      "[1510309670 1290648773] [4123707387 2365452223]\n"
+     ]
+    }
+   ],
    "source": [
     "import jax\n",
-    "from jax import numpy as jnp"
+    "key = jax.random.PRNGKey(1)\n",
+    "key, subkey = jax.random.split(key)\n",
+    "print(key, subkey)\n",
+    "key, subkey = jax.random.split(key)\n",
+    "print(key, subkey)\n",
+    "key, subkey = jax.random.split(key)\n",
+    "print(key, subkey)"
    ]
   },
   {
