--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,101 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'evox.algorithms' has no attribute 'NSGA3'",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'evox'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 77\u001b[0m\n\u001b[1;32m     69\u001b[0m     algorithm \u001b[39m=\u001b[39m algorithms\u001b[39m.\u001b[39mNSGA3(\n\u001b[1;32m     70\u001b[0m         lb\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m),\n\u001b[1;32m     71\u001b[0m         ub\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     72\u001b[0m         n_objs\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m     73\u001b[0m         pop_size\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     74\u001b[0m     )\n\u001b[1;32m     75\u001b[0m     run_moea(algorithm)\n\u001b[0;32m---> 77\u001b[0m test_nsga3()\n",
-      "Cell \u001b[0;32mIn[20], line 69\u001b[0m, in \u001b[0;36mtest_nsga3\u001b[0;34m()\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_nsga3\u001b[39m():\n\u001b[0;32m---> 69\u001b[0m     algorithm \u001b[39m=\u001b[39m algorithms\u001b[39m.\u001b[39;49mNSGA3(\n\u001b[1;32m     70\u001b[0m         lb\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m),\n\u001b[1;32m     71\u001b[0m         ub\u001b[39m=\u001b[39mjnp\u001b[39m.\u001b[39mfull(shape\u001b[39m=\u001b[39m(\u001b[39m3\u001b[39m,), fill_value\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[1;32m     72\u001b[0m         n_objs\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m,\n\u001b[1;32m     73\u001b[0m         pop_size\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m,\n\u001b[1;32m     74\u001b[0m     )\n\u001b[1;32m     75\u001b[0m     run_moea(algorithm)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'evox.algorithms' has no attribute 'NSGA3'"
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mevox\u001b[39;00m \u001b[39mimport\u001b[39;00m pipelines, algorithms, problems\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mevox\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmonitors\u001b[39;00m \u001b[39mimport\u001b[39;00m StdMOMonitor\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mevox\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m IGD\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'evox'"
      ]
     }
    ],
-   "source": [
-    "from evox import pipelines, algorithms, problems\n",
-    "from evox.monitors import StdMOMonitor\n",
-    "from evox.metrics import IGD\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "\n",
-    "def run_moea(algorithm, problem=problems.classic.DTLZ1(m=3)):\n",
-    "    key = jax.random.PRNGKey(123)\n",
-    "    monitor = StdMOMonitor(record_pf=False)\n",
-    "    problem = problems.classic.DTLZ1(m=3)\n",
-    "    pipeline = pipelines.StdPipeline(\n",
-    "        algorithm=algorithm,\n",
-    "        problem=problem,\n",
-    "        fitness_transform=monitor.record_fit,\n",
-    "    )\n",
-    "    state = pipeline.init(key)\n",
-    "    true_pf, state = problem.pf(state)\n",
-    "\n",
-    "    for i in range(10):\n",
-    "        state = pipeline.step(state)\n",
-    "\n",
-    "    objs = monitor.get_last()\n",
-    "    igd = IGD(true_pf, objs).calulate()\n",
-    "    print(\"igd\", igd)\n",
-    "\n",
-    "\n",
-    "def test_ibea():\n",
-    "    algorithm = algorithms.IBEA(\n",
-    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
-    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
-    "        n_objs=3,\n",
-    "        pop_size=100,\n",
-    "    )\n",
-    "    run_moea(algorithm)\n",
-    "\n",
-    "\n",
-    "def test_moead():\n",
-    "    algorithm = algorithms.MOEAD(\n",
-    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
-    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
-    "        n_objs=3,\n",
-    "        pop_size=100,\n",
-    "        type=1,\n",
-    "    )\n",
-    "    run_moea(algorithm)\n",
-    "\n",
-    "\n",
-    "def test_nsga2():\n",
-    "    algorithm = algorithms.NSGA2(\n",
-    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
-    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
-    "        n_objs=3,\n",
-    "        pop_size=100,\n",
-    "    )\n",
-    "    run_moea(algorithm)\n",
-    "\n",
-    "\n",
-    "def test_rvea():\n",
-    "    algorithm = algorithms.RVEA(\n",
-    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
-    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
-    "        n_objs=3,\n",
-    "        pop_size=100,\n",
-    "    )\n",
-    "    run_moea(algorithm)\n",
-    "    \n",
-    "\n",
-    "def test_nsga3():\n",
-    "    algorithm = algorithms.NSGA3(\n",
-    "        lb=jnp.full(shape=(3,), fill_value=0),\n",
-    "        ub=jnp.full(shape=(3,), fill_value=1),\n",
-    "        n_objs=3,\n",
-    "        pop_size=100,\n",
-    "    )\n",
-    "    run_moea(algorithm)\n",
-    "\n",
-    "test_nsga3()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
